k8s/webapp-traefik-strip-prefix-middlerware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pi-mail-monitor-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /pi-mail-monitor
