k8s/nats-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-test
  labels:
    app: nats-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-test
  template:
    metadata:
      labels:
        app: nats-test
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: nats-test
        image: ghcr.io/guentherloesel/pi-mail-monitor/nats-test:0.2.0
