k8s/webapp.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: webapp
    app: webapp
  name: webapp
spec:
  imagePullSecrets:
  - name: ghcr-secret
  containers:
  - name: webapp
    image: ghcr.io/guentherloesel/pi-mail-monitor/web:0.4.0
    volumeMounts:
    - mountPath: /etc/nginx/conf.d/couchdb-proxy.conf
      name: nginx-couchdb-config
      subPath: couchdb-proxy.conf

  volumes:
  - name: nginx-couchdb-config
    emptyDir: {}
  - name: nginx-config-template
    configMap:
      name: nginx-couchdb-config
