k8s/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp # nginx pod label
  ports:
    - name: http
      port: 80
